force-app/main/default/objects/tFlow__Route__c/fields/tFlow__App__c.field-meta.xml
<CustomField>
    <fullName>tFlow__App__c</fullName>
    <label>App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>