force-app/main/default/objects/tFlow__Route__c/fields/tFlow__Base_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>tFlow__Base_Object_Name__c</fullName>
    <label>Base Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>