force-app/main/default/objects/tFlow__Route__c/fields/tFlow__Group__c.field-meta.xml
<CustomField>
    <fullName>tFlow__Group__c</fullName>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>