force-app/main/default/objects/tFlow__Route__c/fields/tFlow__Hook_Class__c.field-meta.xml
<CustomField>
    <fullName>tFlow__Hook_Class__c</fullName>
    <description>The class to instantiate</description>
    <label>Hook Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>