force-app/main/default/objects/tFlow__Route__c/fields/tFlow__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>tFlow__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>