force-app/main/default/objects/tFlow__Route__c/fields/tFlow__Is_Sortable__c.field-meta.xml
<CustomField>
    <fullName>tFlow__Is_Sortable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sortable</label>
    <type>Checkbox</type>
</CustomField>