force-app/main/default/objects/tFlow__Route__c/fields/tFlow__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>tFlow__Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Id</label>
    <referenceTo>tFlow__Route__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>