force-app/main/default/objects/tFlow__Route__c/listViews/tFlow__All.listView-meta.xml
<ListView>
    <fullName>tFlow__All</fullName>
    <columns>tFlow__Is_Sortable__c</columns>
    <columns>NAME</columns>
    <columns>tFlow__App_Id__c</columns>
    <columns>tFlow__App__c</columns>
    <columns>tFlow__App_Next__c</columns>
    <columns>tFlow__Display_Order__c</columns>
    <columns>tFlow__Is_Hidden__c</columns>
    <columns>tFlow__Is_System_Required__c</columns>
    <columns>tFlow__Parent_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>