force-app/main/default/objects/tFlow__Route__c/listViews/tFlow__All1.listView-meta.xml
<ListView>
    <fullName>tFlow__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>